# ecosystem-research

./: .gitignore  GIT_SUBTREE_MERGING.md  README.md  build.xml  pom.xml
awkmath/: README.md
clojure/: fibonacci.clj  fibonacci_loop.clj  helloworld.clj
clojure/99_problems_in_lisp/: README.md  ninety_nine_problems.clj  ninety_nine_problems.js  ninety_nine_problems.py  ninety_nine_problems_test.clj  ninety_nine_problems_test.js  ninety_nine_problems_test.py  p01.clj
golang/images/: 8bit_equations.go
haskell/: .gitignore  README.md  compile.sh
haskell/csv/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
haskell/csv/app/: Main.hs
haskell/csv/data/: input.csv  output.csv
haskell/csv/src/: Lib.hs
haskell/haskeleton/: README.md  package.yaml  stack.yaml
haskell/helloworld/: helloworld.hs
haskell/launchMissiles/: ChangeLog.md  launchMissiles.cabal  package.yaml  stack.yaml
haskell/launchMissiles/app/: Main.hs
haskell/launchMissiles/src/: Lib.hs
haskell/stack-new/: .gitignore  README.md  package.yaml
haskell/zeit-now-scotty/: .dockerignore  README.md  helloworld-haskell.cabal  now.json
haskell/zeit-now-scotty/app/: Main.hs
icp/greeter/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json  webpack.config.js
java8/: jarfile.manifest  pom.xml
juypter/: .gitignore  README.md  install.sh  install_almond_scala .sh  install_almond_scala.sh  install_extensions.sh  install_ihaskell.sh  install_ijava.sh  install_ijavascript.sh  requirements.in  requirements.sh  requirements.txt
juypter/complex-numbers/: 1_polar.ipynb
juypter/fibonachi/: fibonachi_scala.ipynb
juypter/notebooks/: fibonanchi_ijava.ipynb  fibonanchi_python.ipynb
juypter/notebooks/complex-numbers/: 1_cartisian.ipynb  2_geometry.ipynb
juypter/notebooks/fibonachi/: fibonachi_scala.ipynb  fibonanchi_ijava.ipynb  fibonanchi_javascript.ipynb  fibonanchi_python.ipynb
juypter/notebooks/linear-algebra/: 1_vector_operations.ipynb  2_2d_vectors.ipynb  3_linear_independence.ipynb  4_hadamard_matrix.ipynb  5_vector_norm.ipynb
mathematics/number-factorization-classical/: .gitignore  README.md  build.sbt
mathematics/palindromes/: palindrome-regex.py
python/ctypes/: README.md
python/ctypes/hello_c/: README.md  hello_world.c  hello_world.py
python/ctypes/hello_d/: hello_d  hello_d.d  hello_d.py
python/ctypes/hello_go/: hello_go.go  hello_go.h  hello_go.py
python/ctypes/hello_nim/: hello_nim.nim  hello_nim_cffi.py  hello_nim_ctypes.py
python/ctypes/hello_rust/: Cargo.toml  hello_rust_cffi.py  hello_rust_ctypes.py
python/gpu/: test_pytorch.py  test_tensorflow.py
python/gpu/linux/: requirements.in  requirements.txt  tensorflow_test.py
rust/: README.md
rust/hello-rust/: Cargo.toml  README.md
rust/maths/: Cargo.toml  README.md
rust/rust-crash-course/: .gitignore  Cargo.toml  README.md  hello  panic  panic.rs
rust/rust-crash-course/src/: arrays.rs  borrowing.rs  cli.rs  conditionals.rs  enums.rs  functions.rs  lifetimes.rs  loops.rs  main.rs  option.rs  pointers.rs  print.rs  result.rs  structs.rs  threads.rs  tuples.rs  types.rs  vars.rs
rust/rust-pointers/: Cargo.toml
scala/sbt/: .gitignore  README.md  build.sbt  build.sbt_12
scala/scripting/: README.md  hello.scala
wasm/: README.md
wasm/cargo-wasi/: Cargo.toml  README.md
wasm/compile/: README.md
wasm/header/: README.md  header.sh
wasm/js/: README.md  index.html  test.c  test.c.js  test.c.wasm  test.c.wat  test.js
wasm/js-canvas/rust/: .gitignore  Cargo.toml  README.md  build.sh  clean.sh  index.html  index.js  index.mjs  index_es6_module.mjs  index_wasm_bindgen.js  index_webassembly_instantiatestreaming.js
wasm/js-canvas/rust-webpack/: Cargo.toml  README.md  build.sh  index.html  index.js  package-lock.json  package.json  webpack.config.js
wasm/js-canvas/rust-webpack/src/: julia_set.rs  lib.rs
wasm/js-canvas/rust/canvas-wasm/: Cargo.toml
wasm/js-canvas/rust/canvas-wasm/.cargo/: config.toml
wasm/js-canvas/rust/src/: canvas.rs  functions.rs  lib.rs
wasm/js/c/: build.sh  (+2 more)
wasm/practical-guide-to-wasm-memory/: Cargo.toml
wasm/rust-pointers/: Cargo.toml  README.md  build.sh  index.html  index.js
wasm/wat/: README.md
webapps/: README.md
webapps/electron-vite-react/: package-lock.json  package.json
webapps/nextjs/: next.config.js  package-lock.json  package.json
webapps/svelte/: package-lock.json  package.json  svelte.config.js
webapps/vite-preact-ts/: package.json  pnpm-lock.yaml
webapps/vite-react-rtk/: package.json
webapps/webgl/: README.md
webapps/yew/yewcounter/: .gitignore  Cargo.toml  README.md  Trunk.toml  grass.sh  index.html
webapps/yew/yewcounter/src/: _wee_alloc.rs  counter.css  counter.rs  counter.scss  lib.rs  main.rs
webgl/getting_started/: README.md  index.js
(+123 files in other folders)
