[package]
name = "yewcounter"
version = "0.1.0"
 edition = "2021"
#edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stdweb = "0.4.20"
gloo-console = "0.2.1"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

